<resources>
    <string name="app_name">GroupB09_HW07</string>
    <string name="enter_email_id">Enter Email id</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="welcome">Welcome!!!</string>
    <string name="enter_name">Enter Name</string>
    <string name="submit">Submit</string>
    <string name="log_out">Log out</string>
    <string name="myprofile">My Profile</string>
    <string name="textview">TextView</string>
    <string name="temp">|</string>
    <string name="likes">likes</string>
    <string name="forum_title">Forum Title</string>
    <string name="forum_description">Forum Description</string>
    <string name="commedntadded">Comment added Succesfully</string>
    <string name="commedntdeleted">Comment deleted succesfully</string>
    <string name="deleteconfrim">Are you sure you want to delete?</string>
    <string name="confirmation">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="addforum">New photos</string>
    <string name="errortitle">Please enter title value</string>
    <string name="errordesc">Please enter description</string>
    <string name="successforum">Forum added successfully.</string>
    <string name="formtitl">Forums</string>
    <string name="formtitlw">Forum</string>
    <string name="comments">comments</string>
    <string name="comment">comment</string>
    <string name="write_a_comment">Write a Comment</string>
    <string name="post">Post</string>
    <string name="OK">OK</string>
    <string name="photos">photos</string>
    <string name="user">user</string>
    <string name="errormessage">Something went wrong. Please try again later.</string>
    <string name="forumdeleted">Forum deleted successfully.</string>
    <string name="no_users_available">No users available</string>
    <string name="clientid">375679850702-q42cchba6age05m5prssqhi83t9pjmm5.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_comments">No Comments .</string>
    <string name="logged_out">Logged out successfully...</string>
    <string name="commedntadd">Please add a comment</string>
    <string name="upload_profile_picture">Upload profile picture</string>
    <string name="image">image/</string>
    <string name="imagesuccess">Image uploaded successfully</string>
    <string name="imagefailed">Upload Failed</string>
    <string name="uploadprogress">Uploading progress</string>
    <string name="progress">Progress :</string>
    <string name="view_all_comments">View all comments</string>
    <string name="todo">TODO</string>
    <string name="click_on_image_to_change">Click on image to change</string>
    <string name="enter_a_caption">Enter a Caption</string>
    <string name="upload">Upload</string>
    <string name="photosdb">Photos</string>
    <string name="uploadimage">Please upload photo.</string>
    <string name="posts">Posts</string>
    <string name="no_posts_available">No Posts Available</string>
    <string name="add_photos">Add photos</string>
    <string name="yourprofile">Your profile</string>
    <string name="picturedeleted">Photo deleted successfully.</string>
</resources>